Keyspace creation added.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -192,7 +192,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Create a Keyspace "
+    "def create_keyspace(\n",
+    "        keyspace: str,\n",
+    "        session: cassandra.cluster.Session\n",
+    ") -> int:\n",
+    "    \"\"\"This function creates a cassandra keyspace.\n",
+    "\n",
+    "    Args:\n",
+    "        keyspace: keyspace name.\n",
+    "        session: Cassandra's cluster session.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    query = f\"CREATE KEYSPACE IF NOT EXISTS {keyspace}\"\n",
+    "    query += \" WITH REPLICATION = \"\n",
+    "    query += \"{'class': 'SimpleStrategy', 'replication_factor': 1}\"\n",
+    "    try:\n",
+    "        session.execute(query)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    return 0\n",
+    "\n",
+    "create_keyspace(\n",
+    "    keyspace='sparkify',\n",
+    "    session=session\n",
+    ")"
    ]
   },
   {
