Keyspace set added.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -232,7 +232,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TO-DO: Set KEYSPACE to the keyspace specified above\n"
+    "def set_keyspace(\n",
+    "        keyspace: str,\n",
+    "        session: cassandra.cluster.Session\n",
+    ") -> int:\n",
+    "    \"\"\"This function set the session' keyspace.\n",
+    "\n",
+    "    Args:\n",
+    "        keyspace: keyspace name.\n",
+    "        session: Cassandra's cluster session.\n",
+    "\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        session.set_keyspace(keyspace)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "\n",
+    "    return 0\n",
+    "\n",
+    "set_keyspace(\n",
+    "    keyspace='sparkify',\n",
+    "    session=session\n",
+    ")"
    ]
   },
   {
