CassandraTable class added.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -282,15 +282,143 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CassandraTable:\n",
+    "    \"\"\"This Class represents a Cassandra's Table.\n",
+    "\n",
+    "        Args:\n",
+    "            session: Cassandra's cluster session.\n",
+    "            table_name : Table Name.\n",
+    "\n",
+    "        Attributes:\n",
+    "            session: Cassandra's cluster session.\n",
+    "            table_name : Table Name.\n",
+    "            columns: Table columns.\n",
+    "            columns_types: Table columns with types.\n",
+    "            primary_key: Primary kye definition.\n",
+    "\n",
+    "        \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            session: cassandra.cluster.Session,\n",
+    "            table_name: str) -> None:\n",
+    "\n",
+    "        self.session = session\n",
+    "        self.columns: str = ''\n",
+    "        self.columns_types: str = ''\n",
+    "        self.table_name: str = table_name\n",
+    "        self.primary_key: str = ''\n",
+    "\n",
+    "    def define_columns(self, columns: dict[str: str]):\n",
+    "        \"\"\"This method generates the column definition.\n",
+    "\n",
+    "            Args:\n",
+    "                columns: column definition dict where:\n",
+    "                    keys: column name.\n",
+    "                    values: column type.\n",
+    "        \"\"\"\n",
+    "        cols = [col for col in columns.keys()]\n",
+    "        columns_types = [col + ' ' + col_type for col, col_type in columns.items()]\n",
+    "\n",
+    "        cols = ', '.join(cols)\n",
+    "        columns_types = ', '.join(columns_types)\n",
+    "\n",
+    "        self.columns = cols\n",
+    "        self.columns_types = columns_types\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def define_primary_key(self, primary_key: dict[str, list[str]]):\n",
+    "        \"\"\"This method generates the primary key definition.\n",
+    "\n",
+    "            Args:\n",
+    "                primary_key: column definition dict where:\n",
+    "                    keys: type of key: partition or clustering.\n",
+    "                    values: columns.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        partition = primary_key.get('partition', None)\n",
+    "        partition = ', '.join(partition)\n",
+    "\n",
+    "        clustering = primary_key.get('clustering', '')\n",
+    "        if clustering != '':\n",
+    "            clustering = ', '.join(clustering)\n",
+    "\n",
+    "            self.primary_key = partition + ', ' + clustering\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            self.primary_key = partition\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def build(self) -> str:\n",
+    "        \"\"\"This method generates the create query.\"\"\"\n",
+    "\n",
+    "        query = f\"CREATE TABLE IF NOT EXISTS {self.table_name}\"\n",
+    "        query += '(' + self.columns_types + ', '\n",
+    "        query += f'PRIMARY KEY ({self.primary_key})' + ')'\n",
+    "\n",
+    "        return query\n",
+    "\n",
+    "    def execute(self, echo: bool = True) -> None:\n",
+    "        \"\"\"This method executes the create query.\"\"\"\n",
+    "\n",
+    "        query = self.build()\n",
+    "\n",
+    "        if echo:\n",
+    "            print(query)\n",
+    "\n",
+    "        try:\n",
+    "            rows = self.session.execute(query)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "\n",
+    "        return rows\n",
+    "\n",
+    "    def drop(self) ->  None:\n",
+    "        \"\"\"This method drops the table.\"\"\"\n",
+    "\n",
+    "        query = f'DROP TABLE {self.table_name}'\n",
+    "\n",
+    "        try:\n",
+    "            session.execute(query)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
     "## sessionId = 338, and itemInSession = 4\n",
+    "songs_by_session_table = CassandraTable(\n",
+    "    session=session,\n",
+    "    table_name='songs_by_session'\n",
+    ")\n",
     "\n",
-    "\n",
-    "                    "
+    "songs_by_session_table.\\\n",
+    "    define_columns(\n",
+    "        columns={\n",
+    "            'artist': 'text',\n",
+    "            'iteminsession': 'int',\n",
+    "            'length': 'float',\n",
+    "            'sessionid': 'int',\n",
+    "            'song': 'text',\n",
+    "        }).\\\n",
+    "    define_primary_key(\n",
+    "        primary_key={\n",
+    "            'partition': ['sessionid'],\n",
+    "            'clustering': ['iteminsession']\n",
+    "        }).\\\n",
+    "    execute()"
    ]
   },
   {
@@ -304,16 +432,19 @@
     "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
+    "\n",
     "with open(file, encoding = 'utf8') as f:\n",
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
     "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = \"<ENTER INSERT STATEMENT HERE>\"\n",
-    "        query = query + \"<ASSIGN VALUES HERE>\"\n",
+    "        query = f\"INSERT INTO {songs_by_session_table.table_name} \"\n",
+    "        query += '(' + songs_by_session_table.columns + ')'\n",
+    "        num_cols = len(songs_by_session_table.columns.split(','))\n",
+    "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
     "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
     "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
-    "        session.execute(query, (line[#], line[#]))"
+    "        session.execute(query, (line[0], int(line[3]), float(line[5]), int(line[8]), line[9]))"
    ]
   },
   {
