Query class added.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -388,7 +388,83 @@
     "        try:\n",
     "            session.execute(query)\n",
     "        except Exception as e:\n",
-    "            print(e)\n"
+    "            print(e)\n",
+    "\n",
+    "            \n",
+    "class Query:\n",
+    "    \"\"\"This Class represents a Cassandra's Query statement.\n",
+    "\n",
+    "        Args:\n",
+    "            session: Cassandra's cluster session.\n",
+    "\n",
+    "        Attributes:\n",
+    "            session: Cassandra's cluster session.\n",
+    "            columns: Selected columns.\n",
+    "\n",
+    "        \"\"\"\n",
+    "\n",
+    "    def __init__(\n",
+    "            self,\n",
+    "            session: cassandra.cluster.Session\n",
+    "    ) -> None:\n",
+    "\n",
+    "        self.session = session\n",
+    "        self.columns: str = ''\n",
+    "        self.table_name: str = ''\n",
+    "        self.where_value: str = ''\n",
+    "\n",
+    "    def select(self, columns: str):\n",
+    "        \"\"\"This method is used to select columns.\n",
+    "\n",
+    "            Args:\n",
+    "                columns: column to be selected\n",
+    "        \"\"\"\n",
+    "\n",
+    "        self.select_columns = columns\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def from_table(self, table_name: str):\n",
+    "        \"\"\"This method is used to define table name.\n",
+    "\n",
+    "            Args:\n",
+    "                table_name: Table name.\n",
+    "        \"\"\"\n",
+    "        self.table_name = table_name\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def where(self, conditions: str):\n",
+    "        \"\"\"This method is used to define WHERE Clause.\n",
+    "\n",
+    "            Args:\n",
+    "                conditions: hardcoded where conditions.\n",
+    "        \"\"\"\n",
+    "        self.where_value = conditions\n",
+    "\n",
+    "        return self\n",
+    "\n",
+    "    def build(self) -> str:\n",
+    "        \"\"\"This method generates the select query.\"\"\"\n",
+    "\n",
+    "        where_clause = ''\n",
+    "\n",
+    "        if self.where_value:\n",
+    "            where_clause = f\"WHERE {self.where_value}\"\n",
+    "\n",
+    "        return f\"SELECT {self.select_columns} FROM {self.table_name} {where_clause}\"\n",
+    "\n",
+    "    def execute(self):\n",
+    "        \"\"\"This method executes the create query.\"\"\"\n",
+    "\n",
+    "        query = self.build()\n",
+    "\n",
+    "        try:\n",
+    "            rows = self.session.execute(query)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "\n",
+    "        return rows\n"
    ]
   },
   {
@@ -462,7 +538,22 @@
    },
    "outputs": [],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table"
+    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
+    "query = Query(\n",
+    "    session=session\n",
+    ")\n",
+    "\n",
+    "rows = query.\\\n",
+    "    select(\n",
+    "        columns=\"artist, song, length\").\\\n",
+    "    from_table(\n",
+    "    table_name=songs_by_session_table.table_name).\\\n",
+    "    where(\n",
+    "    conditions=\"sessionid=338 and iteminsession=4\").\\\n",
+    "    execute()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.artist, row.song, row.length)"
    ]
   },
   {
