Queries 2 and 3 created

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -571,9 +571,75 @@
    "source": [
     "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
     "## for userid = 10, sessionid = 182\n",
+    "artist_song_user = CassandraTable(\n",
+    "    session=session,\n",
+    "    table_name='artist_song_user'\n",
+    ")\n",
+    "\n",
+    "artist_song_user.\\\n",
+    "    define_columns(\n",
+    "        columns={\n",
+    "            'artist': 'text',\n",
+    "            'song': 'text',\n",
+    "            'userid': 'int',\n",
+    "            'iteminsession': 'int',\n",
+    "            'first_name': 'text',\n",
+    "            'last_name': 'text',\n",
+    "            'sessionid': 'int'\n",
+    "        }).\\\n",
+    "    define_primary_key(\n",
+    "        primary_key={\n",
+    "            'partition': ['userid'],\n",
+    "            'clustering': ['sessionid', 'iteminsession', 'first_name', 'last_name']\n",
+    "        }).\\\n",
+    "    execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
+    "file = 'event_datafile_new.csv'\n",
     "\n",
     "\n",
-    "                    "
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "        query = f\"INSERT INTO {artist_song_user.table_name} \"\n",
+    "        query += '(' + artist_song_user.columns + ')'\n",
+    "        num_cols = len(artist_song_user.columns.split(','))\n",
+    "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
+    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        session.execute(query, (line[0], line[9], int(line[10]), int(line[3]), line[1], line[4], int(line[8])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = Query(\n",
+    "    session=session\n",
+    ")\n",
+    "\n",
+    "rows = query.\\\n",
+    "    select(\n",
+    "        columns=\"artist, song, first_name, last_name\").\\\n",
+    "    from_table(\n",
+    "    table_name=artist_song_user.table_name).\\\n",
+    "    where(\n",
+    "    conditions=\"userid = 10 and sessionid = 182\").\\\n",
+    "    execute()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.artist, row.song, row.first_name, row.last_name)"
    ]
   },
   {
@@ -583,9 +649,25 @@
    "outputs": [],
    "source": [
     "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "user_table = CassandraTable(\n",
+    "    session=session,\n",
+    "    table_name='user_table'\n",
+    ")\n",
     "\n",
-    "\n",
-    "                    "
+    "user_table.\\\n",
+    "    define_columns(\n",
+    "        columns={\n",
+    "            'userid': 'int',\n",
+    "            'first_name': 'text',\n",
+    "            'last_name': 'text',\n",
+    "            'song': 'text'\n",
+    "        }).\\\n",
+    "    define_primary_key(\n",
+    "        primary_key={\n",
+    "            'partition': ['song'],\n",
+    "            'clustering': ['userid']\n",
+    "        }).\\\n",
+    "    execute()                    "
    ]
   },
   {
@@ -593,14 +675,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "file = 'event_datafile_new.csv'\n",
+    "\n",
+    "\n",
+    "with open(file, encoding = 'utf8') as f:\n",
+    "    csvreader = csv.reader(f)\n",
+    "    next(csvreader) # skip header\n",
+    "    for line in csvreader:\n",
+    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
+    "        query = f\"INSERT INTO {user_table.table_name} \"\n",
+    "        query += '(' + user_table.columns + ')'\n",
+    "        num_cols = len(user_table.columns.split(','))\n",
+    "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
+    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
+    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
+    "        session.execute(query, (int(line[10]), line[1], line[4], line[9]))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "query = Query(\n",
+    "    session=session\n",
+    ")\n",
+    "\n",
+    "rows = query.\\\n",
+    "    select(\n",
+    "        columns=\"userid, first_name, last_name\").\\\n",
+    "    from_table(\n",
+    "    table_name=user_table.table_name).\\\n",
+    "    where(\n",
+    "    conditions=\"song='All Hands Against His Own'\").\\\n",
+    "    execute()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row.userid, row.first_name, row.last_name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -623,7 +737,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "songs_by_session_table.drop()\n",
+    "artist_song_user.drop()\n",
+    "user_table.drop()"
+   ]
   },
   {
    "cell_type": "markdown",
