Query documentation added.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "# Part II. Complete the Apache Cassandra coding portion of your project. \n",
     "\n",
-    "## Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
+    "#### Now you are ready to work with the CSV file titled <font color=red>event_datafile_new.csv</font>, located within the Workspace directory.  The event_datafile_new.csv contains the following columns: \n",
     "- artist \n",
     "- firstName of user\n",
     "- gender of user\n",
@@ -298,24 +298,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we need to create tables to run the following queries. Remember, with Apache Cassandra you model the database tables on the queries you want to run."
+    "### Data Modeling with Cassandra."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create queries to ask the following three questions of the data\n",
+    "#### Create queries to ask the following three questions of the data\n",
     "\n",
-    "### 1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
+    "1. Give me the artist, song title and song's length in the music app history that was heard during  sessionId = 338, and itemInSession  = 4\n",
     "\n",
     "\n",
-    "### 2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "2. Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
     "    \n",
     "\n",
-    "### 3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "3. Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python Classes\n",
+    "\n",
+    "To facilitate the Data modeling and database querying, I have created two classes:\n",
+    "\n",
+    "* CassandraTable: This class provides an interface based on Python's Builder Pattern to facilitate table creation.\n",
+    "* Query: This class provides an interface based on Python's Builder Pattern to facilitate query creation and execution."
    ]
   },
   {
@@ -506,6 +518,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 1: Songs info by Session\n",
+    "\n",
+    "> Give me the artist, song title and song's length in the music app history that was heard during sessionId = 338, and itemInSession = 4\n",
+    "\n",
+    "To fulfill this business requirement, we are going to create the following table structure:\n",
+    "\n",
+    "* Columns:\n",
+    "    * `artirs`\n",
+    "    * `iteminsession`\n",
+    "    * `length`\n",
+    "    * `sessionid`\n",
+    "    * `song`\n",
+    "* Primary Key:\n",
+    "    * Partition Key: `sessionid`\n",
+    "    * Clustering column: `iteminsession`\n",
+    "\n",
+    "Since we are going to filter by sessionid and iteminsession, we'll need to have both as a composed key. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -520,7 +555,7 @@
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x22297ebfc70>"
+       "<cassandra.cluster.ResultSet at 0x241d3594eb0>"
       ]
      },
      "execution_count": 9,
@@ -529,8 +564,6 @@
     }
    ],
    "source": [
-    "## TO-DO: Query 1:  Give me the artist, song title and song's length in the music app history that was heard during \\\n",
-    "## sessionId = 338, and itemInSession = 4\n",
     "songs_by_session_table = CassandraTable(\n",
     "    session=session,\n",
     "    table_name='songs_by_session'\n",
@@ -561,7 +594,6 @@
    },
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "\n",
@@ -569,13 +601,10 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
     "        query = f\"INSERT INTO {songs_by_session_table.table_name} \"\n",
     "        query += '(' + songs_by_session_table.columns + ')'\n",
     "        num_cols = len(songs_by_session_table.columns.split(','))\n",
     "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (line[0], int(line[3]), float(line[5]), int(line[8]), line[9]))"
    ]
   },
@@ -583,12 +612,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Do a SELECT to verify that the data have been inserted into each table"
+    "#### SELECT to verify that the data have been inserted"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -602,7 +631,6 @@
     }
    ],
    "source": [
-    "## TO-DO: Add in the SELECT statement to verify the data was entered into the table\n",
     "query = Query(\n",
     "    session=session\n",
     ")\n",
@@ -624,35 +652,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### COPY AND REPEAT THE ABOVE THREE CELLS FOR EACH OF THE THREE QUESTIONS"
+    "#### Query 2: Songs played by user\n",
+    "\n",
+    "> Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name) for userid = 10, sessionid = 182\n",
+    "\n",
+    "To fulfill this business requirement, we are going to create the following table structure:\n",
+    "\n",
+    "* Columns:\n",
+    "    * `artirs`\n",
+    "    * `song`\n",
+    "    * `userid`\n",
+    "    * `iteminsession`\n",
+    "    * `first_name`\n",
+    "    * `last_name`\n",
+    "    * `sessionid`\n",
+    "* Primary Key:\n",
+    "    * Partition Key: `userid`\n",
+    "    * Clustering column: `sessionid`, `iteminsession`\n",
+    "    \n",
+    "In this case we have included iteminsession as clustering column to sort the table by this column. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE IF NOT EXISTS artist_song_user(artist text, song text, userid int, iteminsession int, first_name text, last_name text, sessionid int, PRIMARY KEY (userid, sessionid, iteminsession, first_name, last_name))\n"
+      "CREATE TABLE IF NOT EXISTS artist_song_user(artist text, song text, userid int, iteminsession int, first_name text, last_name text, sessionid int, PRIMARY KEY (userid, sessionid, iteminsession))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x22297ebfd30>"
+       "<cassandra.cluster.ResultSet at 0x241d366ebe0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## TO-DO: Query 2: Give me only the following: name of artist, song (sorted by itemInSession) and user (first and last name)\\\n",
-    "## for userid = 10, sessionid = 182\n",
     "artist_song_user = CassandraTable(\n",
     "    session=session,\n",
     "    table_name='artist_song_user'\n",
@@ -672,18 +716,17 @@
     "    define_primary_key(\n",
     "        primary_key={\n",
     "            'partition': ['userid'],\n",
-    "            'clustering': ['sessionid', 'iteminsession', 'first_name', 'last_name']\n",
+    "            'clustering': ['sessionid', 'iteminsession']\n",
     "        }).\\\n",
     "    execute()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We have provided part of the code to set up the CSV file. Please complete the Apache Cassandra code below#\n",
     "file = 'event_datafile_new.csv'\n",
     "\n",
     "\n",
@@ -691,19 +734,23 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
     "        query = f\"INSERT INTO {artist_song_user.table_name} \"\n",
     "        query += '(' + artist_song_user.columns + ')'\n",
     "        num_cols = len(artist_song_user.columns.split(','))\n",
     "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (line[0], line[9], int(line[10]), int(line[3]), line[1], line[4], int(line[8])))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### SELECT to verify that the data have been inserted"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -736,36 +783,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Query 3: Songs played by user\n",
+    "\n",
+    "> Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
+    "\n",
+    "To fulfill this business requirement, we are going to create the following table structure:\n",
+    "\n",
+    "* Columns:\n",
+    "    * `userid`\n",
+    "    * `first_name`\n",
+    "    * `last_name`\n",
+    "    * `song`\n",
+    "* Primary Key:\n",
+    "    * Partition Key: `song`\n",
+    "    * Clustering column: `userid`\n",
+    "    \n",
+    "In this case, we have included userid as a clustering column to avoid overwriting the song by a user."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CREATE TABLE IF NOT EXISTS user_table(userid int, first_name text, last_name text, song text, PRIMARY KEY (song, userid))\n"
+      "CREATE TABLE IF NOT EXISTS user_song_table(userid int, first_name text, last_name text, song text, PRIMARY KEY (song, userid))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x222982a62b0>"
+       "<cassandra.cluster.ResultSet at 0x241d3720e80>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## TO-DO: Query 3: Give me every user name (first and last) in my music app history who listened to the song 'All Hands Against His Own'\n",
-    "user_table = CassandraTable(\n",
+    "user_song_table = CassandraTable(\n",
     "    session=session,\n",
-    "    table_name='user_table'\n",
+    "    table_name='user_song_table'\n",
     ")\n",
     "\n",
-    "user_table.\\\n",
+    "user_song_table.\\\n",
     "    define_columns(\n",
     "        columns={\n",
     "            'userid': 'int',\n",
@@ -783,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,20 +862,26 @@
     "    csvreader = csv.reader(f)\n",
     "    next(csvreader) # skip header\n",
     "    for line in csvreader:\n",
-    "## TO-DO: Assign the INSERT statements into the `query` variable\n",
-    "        query = f\"INSERT INTO {user_table.table_name} \"\n",
-    "        query += '(' + user_table.columns + ')'\n",
-    "        num_cols = len(user_table.columns.split(','))\n",
+    "        query = f\"INSERT INTO {user_song_table.table_name} \"\n",
+    "        query += '(' + user_song_table.columns + ')'\n",
+    "        num_cols = len(user_song_table.columns.split(','))\n",
     "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
-    "        ## TO-DO: Assign which column element should be assigned for each column in the INSERT statement.\n",
-    "        ## For e.g., to INSERT artist_name and user first_name, you would change the code below to `line[0], line[1]`\n",
     "        session.execute(query, (int(line[10]), line[1], line[4], line[9]))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### SELECT to verify that the data have been inserted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -828,7 +902,7 @@
     "    select(\n",
     "        columns=\"userid, first_name, last_name\").\\\n",
     "    from_table(\n",
-    "    table_name=user_table.table_name).\\\n",
+    "    table_name=user_song_table.table_name).\\\n",
     "    where(\n",
     "    conditions=\"song='All Hands Against His Own'\").\\\n",
     "    execute()\n",
@@ -852,7 +926,7 @@
    "source": [
     "songs_by_session_table.drop()\n",
     "artist_song_user.drop()\n",
-    "user_table.drop()"
+    "user_song_table.drop()"
    ]
   },
   {
