artist_song_user definition aligned with primary key.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -699,13 +699,14 @@
     "artist_song_user.\\\n",
     "    define_columns(\n",
     "        columns={\n",
+    "            'userid': 'int',\n",
+    "            'sessionid': 'int',\n",
+    "            'iteminsession': 'int',\n",
     "            'artist': 'text',\n",
     "            'song': 'text',\n",
-    "            'userid': 'int',\n",
-    "            'iteminsession': 'int',\n",
     "            'first_name': 'text',\n",
     "            'last_name': 'text',\n",
-    "            'sessionid': 'int'\n",
+    "\n",
     "        }).\\\n",
     "    define_primary_key(\n",
     "        primary_key={\n",
