artist_song_user insert aligned with primary key.

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -733,7 +733,7 @@
     "        query += '(' + artist_song_user.columns + ')'\n",
     "        num_cols = len(artist_song_user.columns.split(','))\n",
     "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
-    "        session.execute(query, (line[0], line[9], int(line[10]), int(line[3]), line[1], line[4], int(line[8])))"
+    "        session.execute(query, (int(line[10]), int(line[8]), int(line[3]), line[0], line[9], line[1], line[4]))"
    ]
   },
   {
