column order at CREATE and INSERT statements aligned with COMPOSITE PRIMARY KEY for table songs_by_session_table

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -566,10 +566,10 @@
     "songs_by_session_table.\\\n",
     "    define_columns(\n",
     "        columns={\n",
-    "            'artist': 'text',\n",
-    "            'iteminsession': 'int',\n",
-    "            'length': 'float',\n",
     "            'sessionid': 'int',\n",
+    "            'iteminsession': 'int',\n",
+    "            'artist': 'text',\n",
+    "            'length': 'float',\n",
     "            'song': 'text',\n",
     "        }).\\\n",
     "    define_primary_key(\n",
@@ -599,7 +599,7 @@
     "        query += '(' + songs_by_session_table.columns + ')'\n",
     "        num_cols = len(songs_by_session_table.columns.split(','))\n",
     "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
-    "        session.execute(query, (line[0], int(line[3]), float(line[5]), int(line[8]), line[9]))"
+    "        session.execute(query, (int(line[8]), int(line[3]), line[0], float(line[5]), line[9]))"
    ]
   },
   {
