column order at CREATE and INSERT statements aligned with COMPOSITE PRIMARY KEY for table user_song_table

--- a/Project_1B_ Project_Template.ipynb
+++ b/Project_1B_ Project_Template.ipynb
@@ -831,10 +831,10 @@
     "user_song_table.\\\n",
     "    define_columns(\n",
     "        columns={\n",
+    "            'song': 'text',\n",
     "            'userid': 'int',\n",
     "            'first_name': 'text',\n",
     "            'last_name': 'text',\n",
-    "            'song': 'text'\n",
     "        }).\\\n",
     "    define_primary_key(\n",
     "        primary_key={\n",
@@ -861,7 +861,7 @@
     "        query += '(' + user_song_table.columns + ')'\n",
     "        num_cols = len(user_song_table.columns.split(','))\n",
     "        query += \"VALUES (\" + ('%s, ' * num_cols)[:-2] + ')'\n",
-    "        session.execute(query, (int(line[10]), line[1], line[4], line[9]))"
+    "        session.execute(query, (line[9], int(line[10]), line[1], line[4]))"
    ]
   },
   {
